@@ -1,3 +1,8 @@
+2025-01-09  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el: Remove hack for autoloading pixel-scroll.
+	Set `scroll-conservatively' to 101.
+
 2025-01-08  Zhengyi Fu  <i@fuzy.me>
 
 	* init.el: Autoload `consult-kill'.
